fix: overflow backttoworldview

--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -54,6 +54,9 @@
 			line-height: 0;
 
 			&.back-to-world-view {
+				cursor: pointer;
+				overflow: hidden;
+				outline: none;
 				background: black;
 				border: 1px solid grey;
 				flex: 6;
